# livehappy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  run.sh
.github/: AGENTS.md
.github/workflows/: deploy.yml  python-ci.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 587176eebc8b_initial.py  a1b2c3d4e5f6_add_audit_logs_notifications_and_user_fields.py  c3d4e5f6g7h8_add_is_banned_to_users.py  d4e5f6g7h8i9_add_listing_favorites.py
backend/app/: config.py  database.py  elasticsearch.py  kafka.py  main.py  redis.py
backend/app/core/: __init__.py  exceptions.py  handlers.py
backend/app/middleware/: auth.py  ratelimit.py
backend/app/models/: __init__.py  audit_log.py  booking.py  chat.py  listing.py  message.py  notification.py  review.py  social.py  user.py
backend/app/routers/: admin.py  ai.py  auth.py  bookings.py  health.py  listings.py  messages.py  notifications.py  reviews.py  social.py  upload.py  users.py
backend/app/schemas/: booking.py  common.py  listing.py  message.py  notification.py  social.py  user.py
backend/app/services/: admin.py  ai.py  auth.py  booking.py  listing.py  listing_photo.py  message.py  notification.py  review.py  social.py  user.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin.py  test_ai.py  test_auth.py  test_bookings.py  test_e2e_simulation.py  test_listings.py  test_listings_extended.py  test_messages.py  test_notifications.py  test_p1_features.py  test_reviews.py  test_root.py  test_social.py  test_upload_health.py  test_users.py
docker/: Dockerfile.backend  docker-compose.yml
docs/: ci-log-analysis.md
docs/00-architecture/: 01-overview.md  02-development-workflow.md
docs/01-api/: 01-auth.md
docs/02-database/: 01-schema.md
docs/03-deployment/: 01-docker-local.md  01-local-dev.md  02-ecs-deploy.md
frontend/: index.html  nginx.conf
frontend/css/: system.css
frontend/js/: api-client.js  app.js
frontend/screens/admin/: dashboard.html  listings.html  users.html
frontend/screens/ai/: chat.html
frontend/screens/auth/: login.html  register.html
frontend/screens/bookings/: confirm.html  detail.html  list.html
frontend/screens/listings/: create.html  detail.html  search.html
frontend/screens/messages/: chat.html  list.html
frontend/screens/reviews/: list.html  write.html
frontend/screens/social/: create.html  feed.html  note.html
frontend/screens/users/: profile.html
scripts/: backup.sh  deploy-ecs.sh  simulate_journey.py  simulate_journey.sh
网站原型设计模板/: index.html  livehappy-hotel-booking.html  livehappy-hotel-booking.html.artifact.json
网站原型设计模板/screens/admin/: dashboard.html  listings.html  users.html
网站原型设计模板/screens/ai/: chat.html
网站原型设计模板/screens/auth/: login.html  register.html
网站原型设计模板/screens/bookings/: confirm.html  detail.html  list.html
网站原型设计模板/screens/listings/: create.html  detail.html  search.html
(+7 files in other folders)
